--- a/Navigation/Info.plist
+++ b/Navigation/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Доступ к геопозиции позволит вам пользоваться картами в приложении</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -26,7 +28,7 @@
 		<true/>
 	</dict>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Доступ к микрофону позволит вам использовать функцию "Диктофон" в этом приложении</string>
+	<string>Доступ к микрофону позволит вам использовать функцию &quot;Диктофон&quot; в этом приложении</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
